--- a/app/src/main/res/layout/content_accommodation.xml
+++ b/app/src/main/res/layout/content_accommodation.xml
@@ -162,6 +162,11 @@
                 android:layout_margin="10dp"/>
         </android.support.v7.widget.CardView>
 
-
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+      />
     </LinearLayout>
+
 </android.support.v4.widget.NestedScrollView>
